# exif-date-updater

./: .gitignore  LICENSE  README.md  cli_main.py  example.py  gui_main.py  pyproject.toml  pytest.ini  test_gui.py  test_no_scroll_combo.py
src/exif_date_updater/: __init__.py  cli.py  exif_analyzer.py  exif_updater.py  gui.py  table_row.py
src/exif_date_updater/resources/: README.md
tests/: README.md  __init__.py  run_tests.py  smoke_test.py  test_exif_analyzer.py  test_exif_updater.py  test_installation.py  test_integration.py  test_utils.py
