[project]
name = "exif-date-updater"
dynamic = ["version"]
description = "A tool to analyze and update missing EXIF date information in image files and extract dates from video filenames"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Jan Ullmann", email = "102742052+ullmannJan@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "exifread>=3.0.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.10.0",
    "python-dateutil>=2.8.0",
    "pyside6>=6.5.0",
    "piexif>=1.1.3",
]

[project.scripts]
exif-date-updater = "exif_date_updater.cli:main"
exif-date-updater-gui = "exif_date_updater.gui:run_gui"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/exif_date_updater/_version.py"

[dependency-groups]
dev = [
    "hatch-vcs>=0.5.0",
    "hatchling>=1.27.0",
]
